Add server command

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <p class="lh-1-75 pb1">
             Previously I worked at <a href="https://www.kickstarter.com">Kickstarter</a>,
             <a href="https://www.localmeasure.com/" class="blue link underline-hover">Local Measure</a>,
-            and <a href="http://lexer.io/" class="blue link underline-hover">Lexer</a>. I was also
+            and <a href="https://lexer.io/" class="blue link underline-hover">Lexer</a>. I was also
             a Gameplay Engineer on
             <a href="http://www.rockstargames.com/lanoire/" class="blue link underline-hover">Rockstar Games' L.A. Noire</a>.
           </p>
@@ -47,7 +47,7 @@
           <h2 class="playfair-display f3 pb1">
             <a href="https://increment.com/programming-languages/six-questions-on-programming-languages/" class="blue link underline-hover">Six questions on programming languages</a>
           </h2>
-          <p class="karla lh-1-75">Glossier’s approach to programming language choice for Increment.</p>
+          <p class="karla lh-1-75">Glossier’s approach to programming language choice, published in Stripe’s <a href="https://increment.com" class="blue link underline-hover">Increment</a> magazine.</p>
      <section class="pt4">
         <h1 class="ttu fira-mono f6 mb4 pb3 bb">Open Source Work</h1>
         <article class="pb4">
@@ -78,7 +78,7 @@
             <a href="https://www.linkedin.com/in/chrstphrwrght" class="white link underline-hover">LinkedIn</a>
           </li>
           <li class="dib pl3">
-            <a href="mailto:christohperwright@gmail.com" class="white link underline-hover">E-mail</a>
+            <a href="mailto:christopherwright@gmail.com" class="white link underline-hover">E-mail</a>
           </li>
         </ul>
       </div>
