Add new article

--- a/index.html
+++ b/index.html
@@ -45,10 +45,18 @@
         <h1 class="ttu fira-mono f6 mb4 pb3 bb">Articles</h1>
         <article class="pb4">
           <h2 class="playfair-display f3 pb1">
+            <a href="https://www.oreilly.com/webops-perf/free/infrastructure-now-2018.csp" class="blue link underline-hover">Infrastructure Now 2018 - O'Reilly Media</a>
+          </h2>
+          <p class="karla lh-1-75">Contributor to ebook on infrastructure trends in 2018. Includes thoughts on infrastructure abstraction and the changing role of SREs in growing startups.</p>
+        </article>
+        <article class="pb4">
+          <h2 class="playfair-display f3 pb1">
             <a href="https://increment.com/programming-languages/six-questions-on-programming-languages/" class="blue link underline-hover">Six questions on programming languages</a>
           </h2>
           <p class="karla lh-1-75">Glossier’s approach to programming language choice, published in Stripe’s <a href="https://increment.com" class="blue link underline-hover">Increment</a> magazine.</p>
-     <section class="pt4">
+        </article>
+      </section>
+      <section class="pt4">
         <h1 class="ttu fira-mono f6 mb4 pb3 bb">Open Source Work</h1>
         <article class="pb4">
           <h2 class="playfair-display f3 pb1">
@@ -60,7 +68,7 @@
           <h2 class="playfair-display f3 pb1">
             <a href="https://www.github.com/kickstarter/android-oss" class="blue link underline-hover">Kickstarter for Android</a>
           </h2>
-          <p class="karla lh-1-75">Lead development for initial release, processed over $50 million in pledges since launch. Open source.</p>
+          <p class="karla lh-1-75">Led development for initial release, processed over $50 million in pledges since launch. Open source.</p>
         </article>
       </section>
     </div>
