--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     <div class="mw8 ph3 center">
       <header class="mt5 mt6-ns">
         <h1 class="playfair-display f2 lh-copy">
-          Hello! I'm Christopher Wright. I'm the VP of Engineering at
-          <a href="https://www.glossier.com/" class="blue link underline-hover">Glossier</a> in NYC.
+          Hello! I'm Christopher Wright. I'm the Head of Engineering at
+          <a href="https://www.supergreat.com/" class="blue link underline-hover">Supergreat</a> in NYC.
         </h1>
         <div class="karla f4 pv3">
           <p class="lh-1-75 pb1">
-            Previously I worked at <a href="https://www.kickstarter.com">Kickstarter</a>,
+            Previously I worked as VP of Engineering at <a href="https://glossier.com/">Glossier</a>. I was also
+            an engineer at <a href="https://www.kickstarter.com">Kickstarter</a>,
             <a href="https://www.localmeasure.com/" class="blue link underline-hover">Local Measure</a>,
-            and <a href="https://lexer.io/" class="blue link underline-hover">Lexer</a>. I was also
-            a Gameplay Engineer on
-            <a href="http://www.rockstargames.com/lanoire/" class="blue link underline-hover">Rockstar Games' L.A. Noire</a>.
+            <a href="https://lexer.io/" class="blue link underline-hover">Lexer</a>,
+            and on <a href="http://www.rockstargames.com/lanoire/" class="blue link underline-hover">Rockstar Games' L.A. Noire</a>.
           </p>
           <p class="lh-1-75 pt1">
             You can find me on
@@ -45,13 +45,13 @@
         <h1 class="ttu fira-mono f6 mb4 pb3 bb">Articles</h1>
         <article class="pb4">
           <h2 class="playfair-display f3 pb1">
-            <a href="https://www.oreilly.com/webops-perf/free/infrastructure-now-2018.csp" class="blue link underline-hover">Infrastructure Now 2018 - O'Reilly Media</a>
+            <a href="https://www.oreilly.com/webops-perf/free/infrastructure-now-2018.csp" class="blue link underline-hover">O'Reilly Media: Infrastructure Now</a>
           </h2>
-          <p class="karla lh-1-75">Contributor to ebook on infrastructure trends in 2018. Includes thoughts on infrastructure abstraction and the changing role of SREs in growing startups.</p>
+          <p class="karla lh-1-75">Contributor to ebook on infrastructure trends. Includes thoughts on infrastructure abstraction and the changing role of SREs in growing startups.</p>
         </article>
         <article class="pb4">
           <h2 class="playfair-display f3 pb1">
-            <a href="https://increment.com/programming-languages/six-questions-on-programming-languages/" class="blue link underline-hover">Six questions on programming languages</a>
+            <a href="https://increment.com/programming-languages/six-questions-on-programming-languages/" class="blue link underline-hover">Increment Magazine: Six Questions on Programming Languages</a>
           </h2>
           <p class="karla lh-1-75">Glossier’s approach to programming language choice, published in Stripe’s <a href="https://increment.com" class="blue link underline-hover">Increment</a> magazine.</p>
         </article>
@@ -68,7 +68,7 @@
           <h2 class="playfair-display f3 pb1">
             <a href="https://www.github.com/kickstarter/android-oss" class="blue link underline-hover">Kickstarter for Android</a>
           </h2>
-          <p class="karla lh-1-75">Led development for initial release, processed over $50 million in pledges since launch. Open source.</p>
+          <p class="karla lh-1-75">I led development for the app's initial release. It's processed over $100 million in pledges since launch.</p>
         </article>
       </section>
     </div>
