--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <div class="mw8 ph3 center">
       <header class="mt5 mt6-ns">
         <h1 class="playfair-display f2 lh-copy">
-          Hello! I'm Christopher Wright. I'm the Head of Engineering at
-          <a href="https://www.supergreat.com/" class="blue link underline-hover">Supergreat</a> in NYC.
+          Hello! I'm Christopher Wright. I'm an Engineering Manager at
+          <a href="https://www.stripe.com/" class="blue link underline-hover">Stripe</a> in NYC.
         </h1>
         <div class="karla f4 pv3">
           <p class="lh-1-75 pb1">
-            Previously I worked as VP of Engineering at <a href="https://glossier.com/">Glossier</a>. I was also
-            an engineer at <a href="https://www.kickstarter.com">Kickstarter</a>,
+            Previously I led Engineering at <a href="https://glossier.com/">Glossier</a>,<a href="https://www.kickstarter.com">Kickstarter</a>,
+            and <a href="https://www.supergreat.com/">Supergreat.</a> I was also an Engineer at
             <a href="https://www.localmeasure.com/" class="blue link underline-hover">Local Measure</a>,
             <a href="https://lexer.io/" class="blue link underline-hover">Lexer</a>,
             and on <a href="http://www.rockstargames.com/lanoire/" class="blue link underline-hover">Rockstar Games' L.A. Noire</a>.
