--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </h1>
         <div class="karla f4 pv3">
           <p class="lh-1-75 pb1">
-            Previously I led Engineering at <a href="https://glossier.com/">Glossier</a>, <a href="https://www.kickstarter.com">Kickstarter</a>,
+            Previously I led engineering at <a href="https://glossier.com/">Glossier</a>, <a href="https://www.kickstarter.com">Kickstarter</a>,
             and <a href="https://www.supergreat.com/">Supergreat.</a> I was also an Engineer at
             <a href="https://www.localmeasure.com/" class="blue link underline-hover">Local Measure</a>,
             <a href="https://lexer.io/" class="blue link underline-hover">Lexer</a>,
